Added new route, updated header

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/index.ts"></script>
-    <title>Home Route</title>
+    <script type="module" src="/main.ts"></script>
+    <title>ML In The Browser</title>
   </head>
   <body>
-    <h1>Home Route!</h1>
+    <div class="header">
+      <h1>Project Home</h1>
+      <a
+        href="https://github.com/kensonjohnson/browser-ml"
+        target="_blank"
+        rel="noreferrer"
+        >GitHub Repo</a
+      >
+    </div>
     <hr />
-    <a href="/nested/">Go to nested route</a>
+    <a href="/object-recognition/">Object Recognition</a>
   </body>
 </html>
