--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
       >
     </div>
     <hr />
-    <a href="/object-recognition/">Object Recognition</a>
+    <ul class="page-links">
+      <li><a href="/object-recognition/">Object Recognition</a></li>
+      <li><a href="/pose-detection/">Pose Detection</a></li>
+    </ul>
   </body>
 </html>
