Added content for page

--- a/src/pose-detection/index.html
+++ b/src/pose-detection/index.html
@@ -8,5 +8,17 @@
     <script type="module" src="./pose-detection.ts"></script>
     <link rel="stylesheet" href="./pose-detection.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <h1>Client Side Pose Recognition</h1>
+      <a href="/">Go Back</a>
+    </div>
+    <hr />
+    <h2>Pose Recognition with automatic Human detection</h2>
+
+    <p>
+      Use the form below to upload an image and see the pose detection in
+      action.
+    </p>
+  </body>
 </html>
