Style the output from each model

--- a/src/pose-detection/index.html
+++ b/src/pose-detection/index.html
@@ -15,10 +15,11 @@
     </div>
     <hr />
     <h2>Pose Recognition with automatic Human detection</h2>
-
     <p>
       Use the form below to upload an image and see the pose detection in
       action.
     </p>
+    <div id="form-container"></div>
+    <div id="result-container"></div>
   </body>
 </html>
