--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <ul class="page-links">
       <li><a href="/object-recognition/">Object Recognition</a></li>
       <li><a href="/pose-detection/">Pose Detection</a></li>
+      <li><a href="/visor/">Visor API</a></li>
     </ul>
   </body>
 </html>
