Update html files to use header element

--- a/src/object-recognition/index.html
+++ b/src/object-recognition/index.html
@@ -8,10 +8,10 @@
     <title>Object Recognition</title>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <h1>Client Side Object Recognition</h1>
       <a href="/">Go Back</a>
-    </div>
+    </header>
     <hr />
     <h2>Multiple object detection using pre trained model in TensorFlow.js</h2>
 
