--- a/src/pose-detection/index.html
+++ b/src/pose-detection/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="./pose-detection.css" />
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <h1>Client Side Pose Recognition</h1>
       <a href="/">Go Back</a>
-    </div>
+    </header>
     <hr />
     <h2>Pose Recognition with automatic Human detection</h2>
     <p>
