--- a/src/visor/index.html
+++ b/src/visor/index.html
@@ -9,10 +9,10 @@
     <title>Visor API</title>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <h1>TensorFlowJS Visor API</h1>
       <a href="/">Go Back</a>
-    </div>
+    </header>
     <hr />
     <div class="button-container"></div>
     <div id="visor"></div>
