Renamed directory, spelling error

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
       <li><a href="/pose-detection/">Pose Detection</a></li>
       <li><a href="/visor/">Visor API</a></li>
       <li>
-        <a href="/training-single-nueron/"
-          >Training a Model with a Single Nueron</a
+        <a href="/training-single-neuron/"
+          >Training a Model with a Single neuron</a
         >
       </li>
     </ul>
